Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a name="generative-algorithms" class="anchor" href="#generative-algorithms"><span class="octicon octicon-link"></span></a>Generative Algorithms</h1>
-
-<p>A simple tool that uses the concept of evolution from biology to solve problems.</p>
+        <p>A simple tool that uses the concept of evolution from biology to solve simple "problems".</p>
 
 <p>I wrote this code while reading the book <a href="http://en.wikipedia.org/wiki/The_Selfish_Gene">The Selfish Gene</a> by Richard Dawkins. Somewhere in that book, the author ask the reader to write their own simulator and I was crazy enough to actually do that…</p>
 
